# XClaw-deploy

./: README.md  components.json  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: release-intel.yml  release-windows.yml  release.yml
design-preview/: index.html
docs/: FEATURES_BACKLOG.md  windows-release.md
scripts/: bump-version.mjs  prepare-release.mjs  release.mjs
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: build_artifact.rs  deploy.rs  execution.rs  lib.rs  openclaw.rs  openclaw_ai.rs  project.rs  updates.rs  utils.rs
src/components/: AppUpdater.vue  EnvironmentConfigPanel.vue  ExecutionPanel.vue  GatewayPanel.vue  PageTransition.vue  ProjectConfigPanel.vue  ProjectOverviewCard.vue  ResourceCard.vue  ServerConfigPanel.vue  StatusPill.vue  TaskHistoryPanel.vue  XClawWordmark.vue
src/components/workspace-header/: WorkspaceDetailHeader.vue  WorkspaceHeaderActions.vue
src/layouts/: AppShell.vue
src/lib/: ui-status.ts
src/services/execution/: connection-check.ts  deploy-local.ts
src/services/openclaw/: config.ts  project-ai.ts
src/services/project/: environment-repository.ts  repository.ts  scan.ts
src/services/storage/: task-history.ts
src/services/task-history/: repository.ts
src/services/ui/: confirm.ts  toast.ts
src/stores/: app.ts
src/styles/: main.css
src/types/: project.ts  task.ts
src/views/: WorkspaceView.vue
src/views/workspace/: WorkspaceDeploymentLogsSection.vue  (+3 more)
(+27 files in other folders)
