[package]
name = "XClaw"
version = "1.0.8"
description = "Desktop workbench for front-end build and deployment with OpenClaw"
authors = ["Codex"]
license = ""
repository = ""
edition = "2021"

[lib]
name = "claw_deploy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ssh2 = "0.9.5"
tauri = { version = "2.0.0", features = [] }
tauri-plugin-dialog = "2.7.1"
